# django-resume-api

./: .dockerignore  .env.exemple  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
resumes/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
resumes/migrations/: 0001_initial.py
