[project]
name = "django-resume-api"
version = "0.1.0"
description = ""
authors = [
    {name = "ranim-ahmadi",email = "ahmadiranim.pro@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "django (>=5.0,<6.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.2,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
